hphp/test/zend/good/Zend/tests/errmsg_013.php.expectf

Fatal error: Default value for parameter a with type String needs to have the same type as the type hint array in %s/errmsg_013.php on line 4
